Adding missing images

--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -15,7 +15,9 @@ App准备：
 ## 音高练习
 ### 找到发声位置
 找一个伪声的发声位置是一个比较重要的环节，伪声的发声从来不是依靠夹嗓子，而是依靠改变发声方式，（如图1）。找到合适的发声位置就是将发声的位置从原红圈内提升至蓝色圈内。
- 
+
+![发声位置](./images/voice_position.jpg)
+
 #### 如何寻找发声位置：
 1.	摸着喉结位置 用本音尝试发“ā” ，根据图片寻找发声位置。  
 2.	用鼻子呼吸，闭上嘴巴，感受呼吸的时候，鼻腔凉凉的位置，记住这个位置。  
@@ -34,7 +36,9 @@ App准备：
 我们将发出的 声音音高定义为 *基调*  
 *注意 音高不用提升的太快，慢慢提升，不要破音  
 ### 汉语四声练习
- 
+
+![汉语四声](./images/four_tones.jpg)
+
 （由图像可以看到四声的发声位置）
 我们根据找到的基调来定制  
 第一声比基调略高  
