--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -25,7 +25,7 @@ App准备：
 4.	尝试在“擤鼻涕”的过程中用声带闭上嘴巴发出“hèn” 的声音（有点类似于mc村民不满的声音），发声时音高会呈现↘️的趋势，尽可能记住发声最开始较高的位置，多尝试几次。*不要夹嗓子，嗓子应当一直保持放松的状态！*  
 5.	保持这个发声位置，尝试发出简短的“hèn”后发出“ mū”的声音  
 
-如果你可以发出这个声音，并且在多次联系后，嗓子并没有疲劳，那么，祝贺你，你已经找到一个发声位置了。
+如果你可以发出这个声音，并且在多次练习后，嗓子并没有疲劳，那么，祝贺你，你已经找到一个发声位置了。
 #### 如何提高音调（基调）
 用voice tools 尝试寻找自己的音高  
 打开钢琴app 尝试用上述的发声位置发声 
