--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -1,6 +1,5 @@
 App准备：
-下app 钢琴 VocalPitchMonitor
-下载 voice tools
+下app： 钢琴，VocalPitchMonitor， voice tools
 
 ### 前言：
 这是一个从0开始尽可能简单的嗓音训练教学，其目的并非是快速学会伪声，而是在保护嗓子的前提下，舒服的发出自然的女声。笔者结合了医院中嗓音训练的资料以及整个互联网上的公开资料，加上了自己的一些经验，写了这份嗓音训练的教学。如果希望获得更专业的指导，可以前往深大总院的耳鼻喉科寻求帮助。  
@@ -12,6 +11,11 @@ App准备：
 在练习的时候不要太着急，在完成音高练习后之后润色音色，让声音更加柔和，避免厚实的声音。  
 
 在本文中 笔者将教学分成了两个板块，音高与音色，本文将先进行音高的练习，后进行音色的练习。
+
+
+**应注意，嗓音训练的重点是使用，而非练习，单纯的练习而不使用，这项技能即使在学会后也会被“遗忘”，需要重新寻找感觉，重新练习，在日常生活中经常使用伪声将会帮助你提升伪声技巧，同时保持“语感”，保持一个说话的感觉，以达到应对生活日常使用的目的。
+
+
 ## 音高练习
 ### 找到发声位置
 找一个伪声的发声位置是一个比较重要的环节，伪声的发声从来不是依靠夹嗓子，而是依靠改变发声方式，（如图1）。找到合适的发声位置就是将发声的位置从原红圈内提升至蓝色圈内。
@@ -92,3 +96,38 @@ App准备：
 *练习 从S1中找出两个词语，尽可能快的造句  
 *练习 找朋友聊天，可以先从qq语音消息开始  
 以上练习时均建议录音，自行回放听一听  
+
+## 音色练习
+简述：音色训练的需求其实是因人而异的，有时候音高达到后，即可pass，那么音色训练对你来说就不是必需品，音色训练更像是锦上添花的练习，因为哪怕是顺女，嗓音也并非全是“顺女嗓音”，这并没有界定的标准。音色训练更多的是将你的声音变得柔和，不是那么的“硬邦邦”。音色的训练更多的不是一个完整的训练，而是更多的“技法”。音色的训练更多取决于你对自己声音的预期，而并非像音高，有一个相对明确的标准，这也意味着，在这个阶段的练习中，你将没有任何软件/标准可以给你提供参考，完全取决于自己对声音的认知。  
+
+在练习音色时，同样应参考音高练习的方式，从词语到句子，再进行自己的造句和总结段落等，最后进行一些模拟的日常对话和实际生活使用  
+
+### 模仿  
+经过一些研究，经常听自己喜欢的声音（如果有），会慢慢的改变自己的声音，所以有机会的话可以多听一听你喜欢的声音。  
+
+### 气流发声  
+在说话的时候不要将每一个字落到实处，说话的时候伴随漏气，这会让你的声音听起来更加的柔和。  
+
+首先发 “hè” 但是不要让声带震动，让气流随着口腔上侧吹出，体会气流的感觉。（图）  
+然后用手背放在嘴前，进行基调哼鸣，体会在发声时的气流，尝试增加发声时的气流量，就像说悄悄话那样。  
+与音高的训练相同，先尝试说一些简单的词语，然后尝试朗读句子，最后尝试自己造句和日常的交流，循序渐进的练习，不要着急，会慢慢的看到自己声音的改变。  
+
+寻找一个适合你的气流占比，让声音听起来更符合你的预期，可以是软软的，也可以是比较硬朗的。在寻找占比的过程中应当注意，不要漏气太多，这会让声音听起来很“虚”。  
+
+同时注意，在练习这项技巧的时候可以更多的使用腹部的力量，用充足的气流让声带震动，稳定住音量，自信一些，把声音放出来，这样声音就不会“发抖”。  
+
+注意：在进行这项练习的时候音量可能会降低，需要在练习后期注意提升自己的音量  
+
+### 微笑和发声位置的移动  
+在练习的时候尝试微笑，并且在脑海中假想自己将发声向外移动到口腔外，根据一定的论文和研究表明，通过此方法练习，有大约70%未经训练的人的声音会有女性化的改变（此数据来源为一位言语训练的医生，未经本人二次确认，仅供参考）  
+
+具体方法如图（图）。
+在练习的过程中，头部会不自觉的向前伸，这是正常的现象。  
+
+同样，这也需要一定时间的练习，从词语开始，到句子，最后应用到生活中。  
+
+
+## 结语
+至此，一份参考了医疗机构提供的言语训练相关的教学资料，对嗓音训练的医学研究与结合了本人经验的嗓音训练教学已基本完结，一些图片和资料将会陆陆续续的补充进这份文档，希望可以对正在进行嗓音训练，但是因为经济或时间原因，无法前往医疗机构训练的你提供一些帮助，如果能给本文提供一些建议与自己的想法，欢迎通过邮箱或telegram联系到本文的作者。
+
+本文基于 CC BY-NC-SA 4.0 开源，欢迎所有人贡献自己的想法和用于所有非商业的用途。  
