--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -1,5 +1,5 @@
-App准备：
-下app： 钢琴，VocalPitchMonitor， voice tools
+App准备：  
+钢琴，VocalPitchMonitor， voice tools
 
 ### 前言：
 这是一个从0开始尽可能简单的嗓音训练教学，其目的并非是快速学会伪声，而是在保护嗓子的前提下，舒服的发出自然的女声。笔者结合了医院中嗓音训练的资料以及整个互联网上的公开资料，加上了自己的一些经验，写了这份嗓音训练的教学。如果希望获得更专业的指导，可以前往深大总院的耳鼻喉科寻求帮助。  
@@ -28,6 +28,8 @@ App准备：
 3.	继续闭上嘴巴，模拟鼻子中有异物，用力擤鼻涕的感觉。  
 4.	尝试在“擤鼻涕”的过程中用声带闭上嘴巴发出“hèn” 的声音（有点类似于mc村民不满的声音），发声时音高会呈现↘️的趋势，尽可能记住发声最开始较高的位置，多尝试几次。*不要夹嗓子，嗓子应当一直保持放松的状态！*  
 5.	保持这个发声位置，尝试发出简短的“hèn”后发出“ mū”的声音  
+
+在这个过程中，你可以体会到自己的喉结向上抬升，寻找并保持这种感觉。  
 
 如果你可以发出这个声音，并且在多次练习后，嗓子并没有疲劳，那么，祝贺你，你已经找到一个发声位置了。
 #### 如何提高音调（基调）
