--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -1,5 +1,3 @@
-App准备：  
-钢琴，VocalPitchMonitor， voice tools
 
 ### 前言：
 这是一个从0开始尽可能简单的嗓音训练教学，其目的并非是快速学会伪声，而是在保护嗓子的前提下，舒服的发出自然的女声。笔者结合了医院中嗓音训练的资料以及整个互联网上的公开资料，加上了自己的一些经验，写了这份嗓音训练的教学。如果希望获得更专业的指导，可以前往深大总院的耳鼻喉科寻求帮助。  
@@ -10,11 +8,13 @@ App准备：
 
 在练习的时候不要太着急，在完成音高练习后之后润色音色，让声音更加柔和，避免厚实的声音。  
 
-在本文中 笔者将教学分成了两个板块，音高与音色，本文将先进行音高的练习，后进行音色的练习。
+在本文中，笔者将教学分成了两个板块，音高与音色，本文将先进行音高的练习，后进行音色的练习。
 
 
-**应注意，嗓音训练的重点是使用，而非练习，单纯的练习而不使用，这项技能即使在学会后也会被“遗忘”，需要重新寻找感觉，重新练习，在日常生活中经常使用伪声将会帮助你提升伪声技巧，同时保持“语感”，保持一个说话的感觉，以达到应对生活日常使用的目的。
+**应注意**:嗓音训练的重点是使用，而非练习，单纯的练习而不使用，这项技能即使在学会后也会被“遗忘”，需要重新寻找感觉，重新练习，在日常生活中经常使用伪声将会帮助你提升伪声技巧，同时保持“语感”，保持一个说话的感觉，以达到应对生活日常使用的目的。
 
+你可以使用这些应用程序来进行辅助： 
+钢琴，[VocalPitchMonitor](https://apkpure.com/cn/vocal-pitch-monitor/com.tadaoyamaoka.vocalpitchmonitor)，[Voice Tools](https://apkpure.com/cn/voice-tools/com.DevExtras.VoiceTools)
 
 ## 音高练习
 ### 找到发声位置
@@ -33,7 +33,7 @@ App准备：
 
 如果你可以发出这个声音，并且在多次练习后，嗓子并没有疲劳，那么，祝贺你，你已经找到一个发声位置了。
 #### 如何提高音调（基调）
-用voice tools 尝试寻找自己的音高  
+用Voice Tools尝试寻找自己的音高  
 打开钢琴app 尝试用上述的发声位置发声 
  
 用尽量舒服的方式 发出声音，*不要让嗓子太紧  
@@ -130,6 +130,6 @@ App准备：
 
 
 ## 结语
-至此，一份参考了医疗机构提供的言语训练相关的教学资料，对嗓音训练的医学研究与结合了本人经验的嗓音训练教学已基本完结，一些图片和资料将会陆陆续续的补充进这份文档，希望可以对正在进行嗓音训练，但是因为经济或时间原因，无法前往医疗机构训练的你提供一些帮助，如果能给本文提供一些建议与自己的想法，欢迎通过邮箱或telegram联系到本文的作者。
+至此，一份参考了医疗机构提供的言语训练相关的教学资料，对嗓音训练的医学研究与结合了本人经验的嗓音训练教学已基本完结，一些图片和资料将会陆陆续续的补充进这份文档，希望可以对正在进行嗓音训练，但是因为经济或时间原因，无法前往医疗机构训练的你提供一些帮助，如果能给本文提供一些建议与自己的想法，欢迎通过邮箱或telegram联系到笔者。
 
 本文基于 CC BY-NC-SA 4.0 开源，欢迎所有人贡献自己的想法和用于所有非商业的用途。  
