--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -21,6 +21,7 @@
 找一个伪声的发声位置是一个比较重要的环节，伪声的发声从来不是依靠夹嗓子，而是依靠改变发声方式，（如图1）。找到合适的发声位置就是将发声的位置从原红圈内提升至蓝色圈内。
 
 ![发声位置](./images/voice_position.jpg)
+*图片待补
 
 #### 如何寻找发声位置：
 1.	摸着喉结位置 用本音尝试发“ā” ，根据图片寻找发声位置。  
