--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -1,4 +1,4 @@
-
+![24ACDAF7-61E5-4242-B634-361A5C587E27_1_102_o](https://github.com/Catherina0/Voice-Feminisation-Exercise/assets/38097045/1a013191-0e6a-40d5-b957-7a8de930ed1a)
 ### 前言：
 这是一个从0开始尽可能简单的嗓音训练教学，其目的并非是快速学会伪声，而是在保护嗓子的前提下，舒服的发出自然的女声。笔者结合了医院中嗓音训练的资料以及整个互联网上的公开资料，加上了自己的一些经验，写了这份嗓音训练的教学。如果希望获得更专业的指导，可以前往深大总院的耳鼻喉科寻求帮助。  
 
@@ -18,10 +18,10 @@
 
 ## 音高练习
 ### 找到发声位置
-找一个伪声的发声位置是一个比较重要的环节，伪声的发声从来不是依靠夹嗓子，而是依靠改变发声方式，（如图1）。找到合适的发声位置就是将发声的位置从原红圈内提升至蓝色圈内。
+找一个伪声的发声位置是一个比较重要的环节，伪声的发声从来不是依靠夹嗓子，而是依靠改变发声方式，（如图）。找到合适的发声位置就是将发声的位置从原红圈内提升至蓝色圈内。
 
-![发声位置](./images/voice_position.jpg)
-*图片待补
+![发声位置](./files/IMG_0420.PNG)
+
 
 #### 如何寻找发声位置：
 1.	摸着喉结位置 用本音尝试发“ā” ，根据图片寻找发声位置。  
@@ -35,8 +35,10 @@
 如果你可以发出这个声音，并且在多次练习后，嗓子并没有疲劳，那么，祝贺你，你已经找到一个发声位置了。
 #### 如何提高音调（基调）
 用Voice Tools尝试寻找自己的音高  
-打开钢琴app 尝试用上述的发声位置发声 
- 
+打开钢琴app 尝试用上述的发声位置发声  
+
+![音调对照图](./files/IMG_0427.PNG)
+
 用尽量舒服的方式 发出声音，*不要让嗓子太紧  
 一般从E3开始尝试，慢慢的发出较高音调的声音，继续尝试练习F3或者更高的音高  
 一般认为声音达到G3就是基本达标的，G#3-A3就是较为普通的女性音高
@@ -44,9 +46,9 @@
 *注意 音高不用提升的太快，慢慢提升，不要破音  
 ### 汉语四声练习
 
-*图像待改
+![汉语四声](./files/IMG_0419.PNG)
 
-（由图像可以看到四声的发声位置）
+（由图像可以看到第二声和第四声的走向）
 我们根据找到的基调来定制  
 第一声比基调略高  
 第三声先降低后上升，但是在拐点的时候很容易掉音高，在练习中可以讲第三声发平调，尽可能保持结尾的时候音高不要太低。  
@@ -65,7 +67,7 @@
 同样是 发出基调+词语 ，先发出0.5秒的基调后过度发出词语  
 “你好” “早上好““中午好”“晚上好”“我坐地铁”“不好意思”“我戴眼镜”“打个电话”“出去吃饭”“乘坐高铁”
 
-练习* 通过不同时间段，多听基调，在空闲时间多尝试几次，尽可能保证在寻找基调的时候一次就到F#3（或者到更高的音调），保证对音高的敏感
+练习* 通过不同时间段，多听基调，在空闲时间多尝试几次，尽可能保证在寻找基调的时候一次就到G#3（或者到更高的音调），保证对音高的敏感
 练习词语&短句注意事项  
 1.	保持放松，不要夹嗓子
 2.	不要把声音憋在嗓子里，应该尽可能放出来，不要太紧张，让声音往外走
@@ -111,7 +113,10 @@
 ### 气流发声  
 在说话的时候不要将每一个字落到实处，说话的时候伴随漏气，这会让你的声音听起来更加的柔和。  
 
-首先发 “hè” 但是不要让声带震动，让气流随着口腔上侧吹出，体会气流的感觉。（图）  
+首先发 “hè” 但是不要让声带震动，让气流随着口腔上侧吹出，体会气流的感觉。（如图）  
+
+![气流路径](./files/IMG_0421.PNG)  
+
 然后用手背放在嘴前，进行基调哼鸣，体会在发声时的气流，尝试增加发声时的气流量，就像说悄悄话那样。  
 与音高的训练相同，先尝试说一些简单的词语，然后尝试朗读句子，最后尝试自己造句和日常的交流，循序渐进的练习，不要着急，会慢慢的看到自己声音的改变。  
 
@@ -124,7 +129,10 @@
 ### 微笑和发声位置的移动  
 在练习的时候尝试微笑，并且在脑海中假想自己将发声向外移动到口腔外，根据一定的论文和研究表明，通过此方法练习，有大约70%未经训练的人的声音会有女性化的改变（此数据来源为一位言语训练的医生，未经本人二次确认，仅供参考）  
 
-具体方法如图（图）。
+具体方法如图（如图）。
+
+![发声位置外移](./files/IMG_0426.PNG)
+
 在练习的过程中，头部会不自觉的向前伸，这是正常的现象。  
 
 同样，这也需要一定时间的练习，从词语开始，到句子，最后应用到生活中。  
