--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -1,4 +1,4 @@
-![24ACDAF7-61E5-4242-B634-361A5C587E27_1_102_o](https://github.com/Catherina0/Voice-Feminisation-Exercise/assets/38097045/1a013191-0e6a-40d5-b957-7a8de930ed1a)
+
 ### 前言：
 这是一个从0开始尽可能简单的嗓音训练教学，其目的并非是快速学会伪声，而是在保护嗓子的前提下，舒服的发出自然的女声。笔者结合了医院中嗓音训练的资料以及整个互联网上的公开资料，加上了自己的一些经验，写了这份嗓音训练的教学。如果希望获得更专业的指导，可以前往深大总院的耳鼻喉科寻求帮助。  
 
@@ -142,3 +142,4 @@
 至此，一份参考了医疗机构提供的言语训练相关的教学资料，对嗓音训练的医学研究与结合了本人经验的嗓音训练教学已基本完结，一些图片和资料将会陆陆续续的补充进这份文档，希望可以对正在进行嗓音训练，但是因为经济或时间原因，无法前往医疗机构训练的你提供一些帮助，如果能给本文提供一些建议与自己的想法，欢迎通过邮箱或telegram联系到笔者。
 
 本文基于 CC BY-NC-SA 4.0 开源，欢迎所有人贡献自己的想法和用于所有非商业的用途。  
+Copyright Catherina Grace 2024
