--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -13,8 +13,12 @@
 
 **应注意**:嗓音训练的重点是使用，而非练习，单纯的练习而不使用，这项技能即使在学会后也会被“遗忘”，需要重新寻找感觉，重新练习，在日常生活中经常使用伪声将会帮助你提升伪声技巧，同时保持“语感”，保持一个说话的感觉，以达到应对生活日常使用的目的。
 
-你可以使用这些应用程序来进行辅助： 
-钢琴，[VocalPitchMonitor](https://apkpure.com/cn/vocal-pitch-monitor/com.tadaoyamaoka.vocalpitchmonitor)，[Voice Tools](https://apkpure.com/cn/voice-tools/com.DevExtras.VoiceTools)
+你可以使用这些应用程序来进行辅助：   
+钢琴  
+[VocalPitchMonitor for Android](https://apkpure.com/cn/vocal-pitch-monitor/com.tadaoyamaoka.vocalpitchmonitor),
+[VocalPitchMonitor for iOS](https://apps.apple.com/tw/app/vocal-pitch-monitor/id842218231)  
+[Voice Tools for Android](https://apkpure.com/cn/voice-tools/com.DevExtras.VoiceTools),
+[Voice Tools for iOS](https://apps.apple.com/us/app/voice-tools/id1447495900)
 
 ## 音高练习
 ### 找到发声位置
