--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -41,7 +41,7 @@
 用Voice Tools尝试寻找自己的音高  
 打开钢琴app 尝试用上述的发声位置发声  
 
-![音调对照图](./files/IMG_0427.PNG)
+![音调对照图](./files/IMG_0427.png)
 
 用尽量舒服的方式 发出声音，*不要让嗓子太紧  
 一般从E3开始尝试，慢慢的发出较高音调的声音，继续尝试练习F3或者更高的音高  
