--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -1,12 +1,12 @@
 
 ### 前言：
-这是一个从0开始尽可能简单的嗓音训练教学，其目的并非是快速学会伪声，而是在保护嗓子的前提下，舒服的发出自然的女声。笔者结合了医院中嗓音训练的资料以及整个互联网上的公开资料，加上了自己的一些经验，写了这份嗓音训练的教学。如果希望获得更专业的指导，可以前往深大总院的耳鼻喉科寻求帮助。  
+这是一个从0开始尽可能简单的嗓音训练教学，其目的并非是快速学会伪声，而是在保护嗓子的前提下，舒服的发出自然的女声。笔者结合了关于言语训练的医学资料以及互联网上的公开资料，加上自己的一些经验，完成了这份嗓音训练的教学。如果希望获得更专业的指导，可以前往[MtF.wiki](https://mtf.wiki/zh-cn/docs/vocal-therapy/overview/)寻求线下的医疗资源。  
 
-音高不是越高越好，避免夹子，避免假声 这对声带有损伤，听起来舒服和女性/中性化就好  
+*音高不是越高越好，避免夹子，避免假声 这对声带有损伤，听起来舒服和女性/中性化就好  
 
-每个人声音都是不一样的，应有自己的特点，嗓音从不应该是流水线上的产品，嗓音训练的目的也是让你找到自己喜欢的嗓音。  
+*每个人声音都是不一样的，应有自己的特点，嗓音从不应该是流水线上的产品，嗓音训练的目的也是让你找到自己喜欢的嗓音。  
 
-在练习的时候不要太着急，在完成音高练习后之后润色音色，让声音更加柔和，避免厚实的声音。  
+*在练习的时候不要太着急，在完成音高练习后之后润色音色，让声音更加柔和，避免厚实的声音。  
 
 在本文中，笔者将教学分成了两个板块，音高与音色，本文将先进行音高的练习，后进行音色的练习。
 
