--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -85,7 +85,9 @@
 
 举例：收音机的发展X源自于许多发明者X的帮助，科学家发现X电波和声波X有关。  
 （在句子中 X 的位置处进行一次基调哼鸣，稳住音高，找到发声的感觉。）  
-*练习 C1
+*练习 C1  
+*练习 P1-P4  
+[查看练习语料](.files/练习语料.md)
 
 ### 段落练习
 在长句子的发声技巧基本掌握后，可以练习过度到读段落
@@ -93,7 +95,8 @@
 2.	注意在训练中保持嗓子放松，不要夹嗓子
 3.	控制句末音高，保持句末时音高为↗️趋势
 
-*练习 语料练习P1，P2，P3
+*练习 P5-P8  
+[查看练习语料](.files/练习语料.md)  
 
 ### 聊天场景练习
 在生活中最常见的场景是与人聊天，嗓音训练的目的也是帮助大家在生活日常的场景中尽可能pass。  
