--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -87,7 +87,7 @@
 （在句子中 X 的位置处进行一次基调哼鸣，稳住音高，找到发声的感觉。）  
 *练习 C1  
 *练习 P1-P4  
-[查看练习语料](.files/练习语料.md)
+[查看练习语料](./files/练习语料.md)
 
 ### 段落练习
 在长句子的发声技巧基本掌握后，可以练习过度到读段落
@@ -96,7 +96,7 @@
 3.	控制句末音高，保持句末时音高为↗️趋势
 
 *练习 P5-P8  
-[查看练习语料](.files/练习语料.md)  
+[查看练习语料](./files/练习语料.md)  
 
 ### 聊天场景练习
 在生活中最常见的场景是与人聊天，嗓音训练的目的也是帮助大家在生活日常的场景中尽可能pass。  
