--- a/files/练习语料.md
+++ b/files/练习语料.md
@@ -1,4 +1,4 @@
-句子练习：  
+**句子练习：**  
 P1  
 我今天早上起床后，先喝了一杯热水，然后去公园慢跑了三公里。  
 P2  
@@ -8,7 +8,7 @@ P3
 P4  
 我的工作需要经常出差，每次出差都能见到不同的人和风景，这让我感到生活很充实。  
 
-段落练习：  
+**段落练习：**   
 P5  
 我最近开始学习做饭，发现这是一个既有趣又有挑战性的活动。刚开始的时候，我只能做一些简单的菜，比如煮面条或者炒鸡蛋。后来，我尝试做一些复杂一点的菜，比如红烧肉和麻婆豆腐。虽然有时候会失败，比如把菜烧糊了或者放太多盐，但每次成功的时候，我都感到非常满足。做饭不仅让我学会了很多新技能，还让我更加珍惜每一顿饭，因为我知道这背后有多少辛苦和努力。  
 P6  
@@ -18,6 +18,7 @@ P7
 P8  
 我的朋友小李是一个非常有趣的人。他有很多爱好，比如打篮球、弹吉他、写作等等。每次和他在一起，总能学到很多新东西。小李的性格开朗，总是充满了热情和活力。无论遇到什么困难，他都能保持积极的心态，寻找解决问题的办法。他还特别喜欢帮助别人，每次我遇到困难，他都会热心地帮忙。这样的朋友让我觉得非常幸运，因为在他的影响下，我也变得更加积极向上。  
 
+**短句练习**  
 C1  
 他和大妈打篮球  
 教授接见江姐姐  
@@ -28,7 +29,7 @@ C1
 朋友平时拼拼图  
 阿婆熬夜打麻将  
 
-词语练习  
+**词语练习**  
 S1  
 
 | 序号 | 词语 |
