--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -10,6 +10,13 @@
 
 在本文中，笔者将教学分成了两个板块，音高与音色，本文将先进行音高的练习，后进行音色的练习。
 
+## 课程须知
+
+*区别于B站和某些伪声教学机构所教授的伪声技巧，嗓音训练更加注重的是练习在日常生活当中可以长时间的女声。但是，这也意味着嗓音训练后的女声并不会像伪声一样可以有很多很「可爱」的声线，很多情况下只会达到一个较为女性化（中性偏女性化）的声音。
+
+*嗓音训练的基础课程大约是6-8节课，其中有3节课左右是音高练习，后3-5节课为音色联系。   
+
+**请注意** 嗓音训练的6-8节课是远远不够达成Pass的目标的，Pass的声音需要至少2个月甚至更长时间的练习。
 
 **应注意**:嗓音训练的重点是使用，而非练习，单纯的练习而不使用，这项技能即使在学会后也会被“遗忘”，需要重新寻找感觉，重新练习，在日常生活中经常使用伪声将会帮助你提升伪声技巧，同时保持“语感”，保持一个说话的感觉，以达到应对生活日常使用的目的。
 
