--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -48,7 +48,18 @@
 用Voice Tools尝试寻找自己的音高  
 打开钢琴app 尝试用上述的发声位置发声  
 
-![音调对照图](./files/IMG_0427.png)
+**音高参考图**
+| 音高 |   频率 |
+| :--- | -----: |
+| E3   | 164.81 |
+| F3   | 174.61 |
+| F#3  | 185.00 |
+| G3   | 196.00 |
+| G#3  | 207.65 |
+| A3   | 220.00 |
+| A#3  | 233.08 |
+| B3   | 246.94 |
+| C4   | 261.63 |
 
 用尽量舒服的方式 发出声音，*不要让嗓子太紧  
 一般从E3开始尝试，慢慢的发出较高音调的声音，继续尝试练习F3或者更高的音高  
