--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -66,6 +66,7 @@
 一般认为声音达到G3就是基本达标的，G#3-A3就是较为普通的女性音高
 我们将发出的 声音音高定义为 *基调*  
 *注意 音高不用提升的太快，慢慢提升，不要破音  
+*探索：已知女性音调变化幅度普遍比男性更大，可以自行寻找合适的方式，在后期的练习中慢慢提升音调的变化幅度。  
 ### 汉语四声练习
 
 ![汉语四声](./files/IMG_0419.PNG)
