--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -10,6 +10,8 @@
 
 在本文中，笔者将教学分成了两个板块，音高与音色，本文将先进行音高的练习，后进行音色的练习。
 
+**请注意** 本教程已申请版权，基于CC BY-NC-SA 4.0 开源，禁止一切商业用途。
+
 ## 课程须知
 
 *区别于B站和某些伪声教学机构所教授的伪声技巧，嗓音训练更加注重的是练习在日常生活当中可以长时间的女声。但是，这也意味着嗓音训练后的女声并不会像伪声一样可以有很多很「可爱」的声线，很多情况下只会达到一个较为女性化（中性偏女性化）的声音。
