--- a/嗓音女性化练习.md
+++ b/嗓音女性化练习.md
@@ -16,7 +16,7 @@
 
 *区别于B站和某些伪声教学机构所教授的伪声技巧，嗓音训练更加注重的是练习在日常生活当中可以长时间的女声。但是，这也意味着嗓音训练后的女声并不会像伪声一样可以有很多很「可爱」的声线，很多情况下只会达到一个较为女性化（中性偏女性化）的声音。
 
-*嗓音训练的基础课程大约是6-8节课，其中有3节课左右是音高练习，后3-5节课为音色联系。   
+*嗓音训练的基础课程大约是6-8节课，其中有3节课左右是音高练习，后3-5节课为音色练习。   
 
 **请注意** 嗓音训练的6-8节课是远远不够达成Pass的目标的，Pass的声音需要至少2个月甚至更长时间的练习。
 
